# libquake

./: .gitignore  CHANGELOG.md  CMakeLists.txt  HISTORY.md  README.md  mkdocs.yml
.github/workflows/: cmake-release.yaml
docs/: .pages  index.md
docs/api/: .pages  bsp.md  common.md  index.md  map.md  providers.md  wad.md  wrapper.md
docs/bsp/: .pages  bsp_format.md
docs/common/: concepts.md  entity_parsing.md
docs/map/: csg.md  geometry_conversion.md  lightmapping.md
docs/wad/: wad_format.md
docs_gen/: Dockerfile  Doxyfile  run_docs.sh
include/quakelib/: config.h  entities.h  entity_parser.h  map_provider.h  qmath.h  surface.h  vertex.h
include/quakelib/bsp/: bsp_file.h  entity.h  entity_solid.h  lightmap.h  primitives.h  qbsp.h  qbsp_provider.h  vect.h
include/quakelib/map/: brush.h  entities.h  face.h  lightmap_generator.h  map.h  map_file.h  qmap_provider.h  types.h
include/quakelib/wad/: palette.h  wad.h  wad_manager.h
src/: CMakeLists.txt  wrapper.cpp  wrapper.h
src/bsp/: entity.cpp  entity_solid.cpp  lightmap.cpp  qbsp.cpp  qbsp_provider.cpp  surface.cpp
src/common/: entity.cpp  entity_parser.cpp  surface.cpp  vertex.cpp
src/map/: brush.cpp  csg.cpp  entity_solid.cpp  face.cpp  lightmap_generator.cpp  map.cpp  map_file.cpp  qmap_provider.cpp  wrapper.cpp  wrapper.h
src/utils/xatlas/: xatlas.cpp
src/wad/: palette.cpp  texture.cpp  wad.cpp  wad_manager.cpp
tests/: CMakeLists.txt
tests/data/: test.map
tests/inc/: bsp_dummy.h  map_dummy.h
tests/src/: bsp_tests.cpp  map_builder_tests.cpp  map_tests.cpp  wad_tests.cpp  wrapper_tests.cpp
tools/qviewer/: CMakeLists.txt  common_utils.h  data.h  main.cpp  metrics.h  scene.cpp  scene.h
tools/qviewer/assets/: asset_manager.cpp  asset_manager.h
tools/qviewer/builder/: map_builder.cpp  map_builder.h
tools/qviewer/model/: quake_render_model.h
tools/qviewer/renderer/: map_renderer.cpp  map_renderer.h  shaders.h
